# mve_clangd_inferrence_issue

./: .clang-format  .clang-tidy  .clangd  BAD_INFERRENCE.cpp  CMakeLists.txt  Dockerfile  README.md  source.cpp
.devcontainer/: devcontainer.json
include/foo/: A.hpp  B.hpp
